--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta property="og:image" content="https://midoriit.github.io/SimplePoiMap/SimplePoiMap.png">
     <meta property="og:url" content="https://midoriit.github.io/SimplePoiMap/" />
-    <meta property="og:title" content="タイトル" />
+    <meta property="og:title" content="音地図" />
     <meta property="og:description" content="説明" />
     <meta name="twitter:card" content="summary_large_image" />
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
